2005-09-01  Michael Smith <msmith@fluendo.com>

	* gst/dvdlpcmdec/gstdvdlpcmdec.c: (gst_dvdlpcm_reset),
	(gst_dvdlpcmdec_init), (gst_dvdlpcmdec_setcaps),
	(update_timestamps), (parse_header), (gst_dvdlpcmdec_chain_dvd),
	(gst_dvdlpcmdec_chain_raw):
	  Use the right bytes to parse the LPCM dvd header

2005-09-01  Michael Smith <msmith@fluendo.com>

	* gst/dvdlpcmdec/gstdvdlpcmdec.c: (gst_dvdlpcm_reset),
	(gst_dvdlpcmdec_init), (gst_dvdlpcmdec_setcaps),
	(update_timestamps), (parse_header), (gst_dvdlpcmdec_chain_dvd),
	(gst_dvdlpcmdec_chain_raw):
	  Return the correct values from chain function.

2005-08-31  Michael Smith <msmith@fluendo.com>

	* gst/dvdlpcmdec/gstdvdlpcmdec.c: (gst_dvdlpcm_reset),
	(gst_dvdlpcmdec_init), (gst_dvdlpcmdec_setcaps),
	(update_timestamps), (parse_header), (gst_dvdlpcmdec_chain_dvd),
	(gst_dvdlpcmdec_chain_raw):
	* gst/dvdlpcmdec/gstdvdlpcmdec.h:
	  Restructure LPCM decoder to not expect the demuxer to parse the LPCM
	  header; instead do this internally. Also support the old way, using
	  a different mime-type.

2005-08-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* configure.ac:
	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-ugly-plugins-docs.sgml:
	* docs/plugins/gst-plugins-ugly-plugins-sections.txt:
	* docs/plugins/gst-plugins-ugly-plugins.types:
	* ext/dvdnav/dvdnavsrc.c: (dvdnavsrc_tca_seek):
	* ext/dvdread/dvdreadsrc.c: (_open), (_seek_title),
	(_seek_chapter), (_read):
	* gst/mpegaudioparse/gstmpegaudioparse.c:
	  add plugin documentation
